# VideoProcessingFramework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SampleColorConversion.py  SampleDecode.cpp  SampleDecode.py  SampleDecodeMultiThread.py  SampleDecodeOpenGL.py  SampleDecodeRGB32F.py  SampleDecodeRTSP.py  SampleDecodeSw.py  SampleDemuxDecode.py  SampleDemuxDecode_async.py  SampleEncode.py  SampleEncodeMultiThread.py  SampleFrameUpload.py  SampleMeasureVideoQuality.py  SamplePyTorch.py  SamplePyav.py  SampleRTSP.py  SampleRemap.py  SampleSufraceDownload.py  SampleTensorRTResnet.py  SampleTorchSegmentation.py  SampleTranscode.py  SampleTranscodeOneToN.py  Tests.py  package-lock.json  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-commits.yml  build.yml  ccpp.yml  cmake.yml  docker.yml  test.yml
OpenCVNvCodec/: CMakeLists.txt
OpenCVNvCodec/src/: OpenCVNvCodec.cpp  setup.py
PyNvCodec/: CMakeLists.txt
PyNvCodec/TC/: CMakeLists.txt
PyNvCodec/TC/TC_CORE/: CMakeLists.txt
PyNvCodec/TC/TC_CORE/inc/: CMakeLists.txt  TC_CORE.hpp  Version.hpp  Version.hpp.in
PyNvCodec/TC/TC_CORE/src/: CMakeLists.txt  Task.cpp
PyNvCodec/TC/inc/: CMakeLists.txt  CodecsSupport.hpp  FFmpegDemuxer.h  Logger.h  MemoryInterfaces.hpp  NppCommon.hpp  NvCodecCLIOptions.h  NvCodecUtils.h  NvDecoder.h  NvEncoder.h  NvEncoderCLIOptions.h  NvEncoderCuda.h  Tasks.hpp  Version.hpp  Version.hpp.in
PyNvCodec/TC/src/: CMakeLists.txt  FFmpegDemuxer.cpp  FfmpegSwDecoder.cpp  MemoryInterfaces.cpp  NppCommon.cpp  NvCodecCliOptions.cpp  NvDecoder.cpp  NvEncoder.cpp  NvEncoderCliOptions.cpp  NvEncoderCuda.cpp  Resize.cu  Tasks.cpp  TasksColorCvt.cpp
PyNvCodec/inc/: CMakeLists.txt  ConcurrentQueue.hpp  PyNvCodec.hpp  VPF_Classes.hpp  Version.hpp  Version.hpp.in
PyNvCodec/src/: CMakeLists.txt  PyBufferUploader.cpp  PyCudaBufferDownloader.cpp  PyFFMpegDecoder.cpp  PyFFMpegDemuxer.cpp  PyFFmpegDemuxer.cpp  PyFfmpegDecoder.cpp  PyFrameUploader.cpp  PyNvCodec.cpp  PyNvDecoder.cpp  PyNvEncoder.cpp  PySurfaceConverter.cpp  PySurfaceDownloader.cpp  PySurfaceRemaper.cpp  PySurfaceResizer.cpp  VPF_Classes.cpp
PytorchNvCodec/: CMakeLists.txt
PytorchNvCodec/src/: PytorchNvCodec.cpp  setup.py
Tests/: CMakeLists.txt  test.avi  test.mkv  test_PyFfmpegDemuxer.py  test_PyNvDecoder.py  test_PySurface.py  test_Task.cpp  test_res_change.h264
conda.recipe/: BUILD.md  build.sh  meta.yaml
docker/: Dockerfile  Dockerfile-tensorrt.gpu  Dockerfile.conda  Dockerfile.gpu  Dockerfile.tensorrt  Makefile  docker-compose.yml  poetry-env.sh
docs/: Makefile  PyNvCodec.rst  PytorchNvCodec.rst  conf.py  index.rst
samples/: SampleCupy.py  SampleCupyTensorRT.py  SampleDecode.py  SampleDecodeMultiThread.py  SampleDecodeRTSP.py  SampleDecodeSw.py  SampleDemuxDecode.py  SampleEncode.py  SampleEncodeMultiThread.py  SampleMeasureVideoQuality.py  SampleOpenGL.py  SamplePerf.py  SamplePyTorch.py  SampleRemap.py  SampleTensorRTResnet.py  SampleTorchResnet.py  SampleTorchSegmentation.py  SampleTypeConversionTest.py  requirements.txt  run_test.cmd  utils.py
src/: CMakeLists.txt
src/PyNvCodec/: CMakeLists.txt  __init__.py  __init__.pyi
src/PyNvCodec/inc/: PyNvCodec.hpp
src/PyNvCodec/src/: PyBufferUploader.cpp  PyCudaBufferDownloader.cpp  PyFFMpegDecoder.cpp  PyFFMpegDemuxer.cpp  PyFrameUploader.cpp  PyNvCodec.cpp  PyNvDecoder.cpp  PyNvEncoder.cpp  PySurface.cpp  PySurfaceConverter.cpp  PySurfaceDownloader.cpp  PySurfaceRemaper.cpp
src/PytorchNvCodec/: __init__.py  pyproject.toml  setup.py
src/PytorchNvCodec/src/: PytorchNvCodec.cpp  setup.py
src/TC/: CMakeLists.txt  has_bsf_compile_test.c
src/TC/TC_CORE/: CMakeLists.txt
src/TC/TC_CORE/inc/: TC_CORE.hpp
src/TC/TC_CORE/src/: Task.cpp  Token.cpp
src/TC/inc/: CodecsSupport.hpp  CuvidFunctions.h  FFmpegDemuxer.h  MemoryInterfaces.hpp  NppCommon.hpp  NvCodecCLIOptions.h  NvCodecUtils.h  NvDecoder.h  NvEncoder.h  NvEncoderCuda.h  Tasks.hpp  cuvid_function_pointer.h  tc_dlopen.h
src/TC/src/: FFmpegDemuxer.cpp  FfmpegDecoder.cpp  FfmpegSwDecoder.cpp  MemoryInterfaces.cpp  NppCommon.cpp  NvCodecCliOptions.cpp  NvDecoder.cpp  NvEncoder.cpp  NvEncoderCuda.cpp  Resize.cu  Tasks.cpp  TasksCodec.cpp  TasksColorCvt.cpp  tc_dlopen_unix.cpp  tc_dlopen_windows.cpp
tests/: CMakeLists.txt  gt_files.json  test_PyFFmpegDecoder.py  test_PyFfmpegDemuxer.py  test_PyNvDecoder.py  test_PyNvEncoder.py  test_PySurface.py  test_common.py  test_reported_bugs.py
