[build-system]
requires = [
  "setuptools>=42",
  "scikit-build",
  ## out-comment not install cmake/ninja via pip
  "cmake>=3.21",
  "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pycuda", "pyopengl", "torch", "torchvision", "opencv-python", "onnx", "tensorrt", "PytorchNvCodec @ git+https://github.com/NVIDIA/VideoProcessingFramework.git#subdirectory=src/PytorchNvCodec/"]
samples = ["pycuda", "pyopengl", "torch", "torchvision", "opencv-python", "onnx", "tensorrt", "PytorchNvCodec @ git+https://github.com/NVIDIA/VideoProcessingFramework.git#subdirectory=src/PytorchNvCodec/"]
tests = ["pycuda", "pyopengl", "torch", "torchvision", "opencv-python", "PytorchNvCodec @ git+https://github.com/NVIDIA/VideoProcessingFramework.git#subdirectory=src/PytorchNvCodec/"]
torch = ["torch", "torchvision", "opencv-python", "PytorchNvCodec @ git+https://github.com/NVIDIA/VideoProcessingFramework.git#subdirectory=src/PytorchNvCodec/"]
tensorrt = ["torch", "torchvision", "PytorchNvCodec @ git+https://github.com/NVIDIA/VideoProcessingFramework.git#subdirectory=src/PytorchNvCodec/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
